manifests/gateways/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: hello-world.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: back1-service
                port:
                  number: 80
          - path: /common
            pathType: Prefix
            backend:
              service:
                name: back2-service
                port:
                  number: 80


---

apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30007
